--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,5 +41,10 @@
             </tbody>
         </table>
     </div>
+    <footer id="wsfooter">
+        <h4>Done by: Majd Abboud</h4>
+        <br>
+        <p><a href="mailto:majdabboud81@gmail.com">Email: majdabboud81@gmail.com</a></p>
+    </footer>
 </body>
 </html>
