--- a/app/static/style.css
+++ b/app/static/style.css
@@ -107,6 +107,16 @@ form{
     text-align: center;
 }
 
+#wsfooter{
+    clear: both;
+    text-align: center;
+    background-color: #253342;
+    color: white;
+    padding: 15px;
+    margin-top: 15px;
+}
+
+
 .cta {
     width: 190px;
     height: 50px;
