--- a/app/templates/topic_add.html
+++ b/app/templates/topic_add.html
@@ -23,6 +23,11 @@
         <p><textarea name="content" placeholder="Content"></textarea></p>
         <p><input class="cta" type="submit" value="Create Post"/></p>
     </form>
+    <footer id="wsfooter">
+        <h4>Done by: Majd Abboud</h4>
+        <br>
+        <p><a href="mailto:majdabboud81@gmail.com">Email: majdabboud81@gmail.com</a></p>
+    </footer>
 </body>
 
 <html>
