--- a/app/templates/topic_view.html
+++ b/app/templates/topic_view.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>One million arab coders</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'style.css') }}"/>
+    <link rel="stylesheet" type="text/css" href="/static/style.css"/>
 </head>
 <body>
     <div id="container">
         <nav id="menu">
             <h1 id="logo"> Arab Coders Forums </h1>
             <div class="menu-all"><ul>
-                <li class="menu-item"><a href="index"> Home </a></li>
+                <li class="menu-item"><a href="/index"> Home </a></li>
                 <li class="menu-item"><a href="#"> Members </a></li>
                 <li class="menu-item"><a href="#"> Categories </a></li>
                 <li class="menu-item"><a href="#"> Tutorials </a></li>
@@ -19,12 +19,11 @@
         </nav>
     </div>
 
-    <form action= "{{ url_for('topic_add') }}" method="post">
-        <h2> Create A New Post</h2>
-        <p><input type="text" name="title" placeholder="Title" /></p>
-        <p><textarea name="content" placeholder="Content"></textarea></p>
-        <p><input class="cta" type="submit" value="Create Post"/></p>
-    </form>
+    <div class="content">
+        <h2>{{post.title}}: </h2>
+        <br>
+        <h3 style="text-align: center">{{post.content}}</h3>
+    </div>
 
     <footer class="wsfooter">
         <h4>Done by: Majd Abboud</h4>
@@ -33,5 +32,4 @@
     </footer>
 
 </body>
-
-<html>
+</html>
