--- a/app/static/style.css
+++ b/app/static/style.css
@@ -8,12 +8,6 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-body {
-   min-height: 400px;
-   margin-bottom: 100px;
-   clear: both;
-}
-
 #container {
     width: 100%;
     margin: 0 auto;
@@ -60,10 +54,11 @@ a{
 
 .content {
     max-width: 700px;
-    margin-top: 30px;
+    margin-top: 50px;
     border: solid black;
     border-radius: 20px;
     padding-bottom: 20px;
+
 }
 
 table td {
@@ -112,16 +107,13 @@ form{
     text-align: center;
 }
 
-.wsfooter{
-    position: fixed;
+#wsfooter{
     clear: both;
     text-align: center;
     background-color: #253342;
     color: white;
     padding: 15px;
-    margin-top: 15px ;
-    width: 100%;
-    bottom: 0;
+    margin-top: 15px;
 }
 
 
@@ -140,3 +132,4 @@ form{
 }.cta:active {
     box-shadow: 0 0px #666;
     transform: translateY(5px);
+
