--- a/app/templates/topic_add.html
+++ b/app/templates/topic_add.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <head>
     <meta charset="UTF-8">
     <title>One million arab coders</title>
@@ -18,20 +17,17 @@
             </ul></div>
         </nav>
     </div>
-
     <form action= "{{ url_for('topic_add') }}" method="post">
         <h2> Create A New Post</h2>
         <p><input type="text" name="title" placeholder="Title" /></p>
         <p><textarea name="content" placeholder="Content"></textarea></p>
         <p><input class="cta" type="submit" value="Create Post"/></p>
     </form>
-
-    <footer class="wsfooter">
+    <footer id="wsfooter">
         <h4>Done by: Majd Abboud</h4>
         <br>
         <p><a href="mailto:majdabboud81@gmail.com">Email: majdabboud81@gmail.com</a></p>
     </footer>
-
 </body>
 
 <html>
