--- a/app/static/style.css
+++ b/app/static/style.css
@@ -125,6 +125,16 @@ form{
 }
 
 
+.error-message{
+    font-size: 15px
+}
+
+.error-title{
+    font-size: 40px
+}
+
+
+
 .cta {
     width: 190px;
     height: 50px;
@@ -140,3 +150,4 @@ form{
 }.cta:active {
     box-shadow: 0 0px #666;
     transform: translateY(5px);
+
