--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="utf-8">
     <title>Topic Add</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'style.css') }}"/>
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 
 <body>
 
     <div class="error-title">Ooops !</div>
     <div  class="error-message">
-        Couldn't find what you're looking for...
-        <a href="{{ url_for('home') }}" style="color: blue">Go back to home page from here</a>
+        {{ message }}
+        <a href="{{ url_for('home') }}">Go back to home page from here</a>
     </div>
 
 </body>
