--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -12,7 +12,7 @@
     <div class="error-title">Ooops !</div>
     <div  class="error-message">
         {{ message }}
-        <a href="{{ url_for('home') }}" style="color: blue">Go back to home page from here</a>
+        <a href="{{ url_for('home') }}">Go back to home page from here</a>
     </div>
 
 </body>
