--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -53,25 +53,5 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
 </script>
 
-<script type="text/javascript">
-    $(function ()
-     {
-        $(".deleted").click(function()
-        {
-            var id = $(this).data('id');
-
-            $.ajax({
-                type: "DELETE",
-                url: "/api/topic/delete/"+id,
-                contentType: "application/json; charset=utf-8",
-                dataType: "json",
-                success: function (response)
-                {
-                    alert("Topic deleted successfully !");
-                    location.reload();
-                }
-            });
-        });
-     });
-</script>
+<script src="static/script.js"></script>
 </html>
